k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: carro-vendido-api
  labels:
    app: carro-vendido-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: carro-vendido-api
